--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,5 +35,5 @@ jobs:
           cd $GITHUB_WORKSPACE
           export PATH=$PATH:$(go env GOPATH)/bin
           go get -u github.com/mattn/goveralls
-          go test --race --cover --coverprofile mpc.coverprofile ./...
-          goveralls -coverprofile=surge.coverprofile -service=circleci -repotoken $COVERALLS_TOKEN
+          go test --race --cover --coverprofile secp256k1.coverprofile ./...
+          goveralls -coverprofile=secp256k1.coverprofile -service=circleci -repotoken $COVERALLS_TOKEN
