use specific go version in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: "^1.15.5"
+          go-version: "1.15.5"
       - uses: actions/cache@v1
         with:
           path: ~/go/pkg/mod
@@ -34,6 +34,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           export PATH=$PATH:$(go env GOPATH)/bin
+          go get github.com/onsi/gomega/matchers@v1.10.1
           go get -u github.com/mattn/goveralls
           go test --race --cover --coverprofile secp256k1.coverprofile ./...
           goveralls -coverprofile=secp256k1.coverprofile -service=circleci -repotoken $COVERALLS_TOKEN
